# rst2html-fast

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs
benchmarks/: compare.py  sample.rst
src/: converter.rs  directives.rs  html_utils.rs  inline.rs  lib.rs  lists.rs  main.rs  parser.rs  roles.rs  tables.rs
tests/: integration_test.rs
