[package]
name = "rst2html-fast"
version = "0.1.0"
edition = "2021"
description = "The world's fastest RST to HTML converter"
license = "MIT"
repository = "https://github.com/bodiam/rst2html-fast"
homepage = "https://github.com/bodiam/rst2html-fast"
keywords = ["rst", "restructuredtext", "html", "converter", "parser"]
categories = ["command-line-utilities", "parser-implementations", "text-processing"]
readme = "README.md"

[lib]
name = "rst2html"
path = "src/lib.rs"

[[bin]]
name = "rst2html"
path = "src/main.rs"

[dependencies]
memchr = "2"
chrono = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
